<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="url_pub_info_test">http://222.24.63.111:88/service/Login.asmx/WS_PubInfo_web</string>
    <string name="url_pub_info_test3g">http://222.24.63.111:88/service/Login.asmx/WS_PubInfo_3g</string>
    <string name="url_pub_info">http://222.24.63.111:88/service/Login.asmx/Info</string>
    <string name="APIKEY">46e26be3b3682e2fe62d41614c683d8f</string>
    <string name="hello">陕西电网</string>
    <string name="app_name">陕西电网</string>
    <string name="home">主页</string>
    <string name="account">成员</string>
    <string name="beanExchange">页3</string>
    <string name="winAcciche">图表</string>
    <string name="more">设置</string>
    <string name="lovetitle">一本好书  一生财富</string>
    <string name="progress">当前进度：%s</string>
    <string name="progress_o">当前进度：20%</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="confirm_exit">确认退出程序？</string>
    <string name="mainmenu_home">主目录</string>
    <string name="mainmenu_refresh">刷新</string>
    <string name="mainmenu_createdir">新建文件夹</string>
    <string name="mainmenu_exit">返回书架</string>
    <string name="file_rename">重命名</string>
    <string name="file_delete">删除</string>
    <string name="file_info">详情</string>
    <string name="file_cannotopen">无法打开: %1$s</string>
    <string name="file_exists">文件已存在！</string>
    <string name="file_namecannotempty">文件名不能为空</string>
    <string name="file_create_fail">创建文件失败！</string>
    <string name="file_rename_fail">重命名失败！</string>
    <string name="file_name">文件名</string>
    <string name="file_size">大小</string>
    <string name="file_contents">内容</string>
    <string name="file_lastmodified">最后修改时间</string>
    <string name="file_paste">粘贴</string>
    <string name="file_copy">复制</string>
    <string name="file_move">移动</string>
    <string name="file_create">新建</string>
    <string name="file_copy_fail">复制文件失败！</string>
    <string name="file_move_fail">移动文件失败！</string>
    <string name="file_notexists">文件不存在！</string>
    <string name="importbook">导入书架</string>
    <string name="font_color">字体颜色</string>
    <string name="user_pwd">密  码</string>
    <string name="username_tip">用户名</string>
    <string name="title_activity_">WebActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="rules">法律法规</string>
    <string name="year_read">年报阅览</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>

    <string-array name="public_messages">
        <item>竞价单元年度发电量信息</item>
        <item>竞价单元月度电量计划</item>
        <item>竞价单元计划执行情况</item>
        <item>竞价单元合同执行情况</item>
        <item>竞价单元结算信息</item>
        <item>合同执行明显差异情况说明</item>
        <item>机组设备年利用小时数</item>
        <item>机组年度检修计划数据</item>
    </string-array>
    <string-array name="private_messages_left">
        <item>竞价单元1</item>
        <item>竞价单元2</item>
        <item>竞价单元3</item>
        <item>竞价单元4</item>
        <item>竞价单元5</item>
        <item>竞价单元6</item>
    </string-array>
    <string-array name="private_messages_right">
        <item>合同1</item>
        <item>合同1</item>
        <item>合同1</item>
        <item>合同1</item>
        <item>合同1</item>
        <item>合同1</item>
    </string-array>

    <string name="ac_chart_title">图表信息</string>
    <string name="account_login">成员登陆</string>
    <string name="info_title">通知信息</string>
    <string name="btn_return">返回</string>
    <string name="publisher">发布者：</string>
    <string name="checker">审核者：</string>

    <string-array name="message_type">
        <item>1</item>
        <item>0</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="message_type_name">
        <item>会议通知</item>
        <item>交易中心新闻</item>
        <item>工作议程</item>
        <item>新机组调试投运信息</item>
    </string-array>
    <string-array name="environment_type_name">
        <item>脱硝信息</item>
        <item>脱硫信息</item>
        <item>煤耗信息</item>
        <item>节能减排</item>
    </string-array>
    <string-array name="state_gird_read_test_names">
        <item>国网公司市场交易年报2013</item>
        <item>国网公司市场交易年报2012</item>
        <item>国网公司市场交易年报2011</item>
        <item>国网公司市场交易年报2010</item>
        <item>国网公司市场交易年报2009</item>
    </string-array>

    <string name="isexit">确定要离开吗？</string>
    <string name="loading">正在加载数据中……</string>
    <string name="selectyears">合同年度选择</string>

    <string-array name="chart_pie_parents">
        <item>按交易类型统计年交易电量情况</item>
        <item>按发电类型划分年度发电量</item>
        <item>按接入地区划分年度发电量情况</item>
        <item>按发电集团划分电网结构</item>
    </string-array>
    <string-array name="url_update_sys_pub_info">
        <item>http://222.24.63.111:88/SG/services/Update_System_PubInfo</item>
        <item>http://Update_System_PubInfo</item>
        <item>System_PubInfo</item>
        <item>http://Update_System_PubInfo/System_PubInfo</item>
    </string-array>
    <string-array name="url_update_mkt_result_type">
        <item>http://222.24.63.111:88/SG/services/Update_MktSbs_Result_Type</item>
        <item>http://Update_MktSbs_Result_Type</item>
        <item>mktSbs_Result_Type</item>
        <item>http://Update_MktSbs_Result_Type/mktSbs_Result_Type</item>
    </string-array>
    <string-array name="url_update_mkt_admin_bidunit">
        <item>http://222.24.63.111:88/SG/services/Update_MktAdmin_BidUnits</item>
        <item>http://Updata_MktAdmin_BidUnits</item>
        <item>mktAdmin_BidUnitsImpl</item>
        <item>http://Updata_MktAdmin_BidUnits/mktAdmin_BidUnitsImpl</item>
    </string-array>
    <string-array name="url_update_mkt_admin_participants">
        <item>http://222.24.63.111:88/SG/services/Update_MktAdmin_Participants</item>
        <item>http://Update_MktAdmin_Participants</item>
        <item>mktAdmin_Participants</item>
        <item>http://Update_MktAdmin_Participants/mktAdmin_Participants</item>
    </string-array>
    <string-array name="url_update_mkt_plan_gen_decomenergy_item">
        <item>http://222.24.63.111:88/SG/services/Update_MktPlan_Gen_DecomEnergy_Item</item>
        <item>http://Updata_MktPlan_Gen_DecomEnergy</item>
        <item>ektPlan_Gen_DecomEnergy_Item</item>
        <item>http://Updata_MktPlan_Gen_DecomEnergy/ektPlan_Gen_DecomEnergy_Item</item>
    </string-array>
    <string-array name="url_update_mkt_admin_Share">
        <item>http://222.24.63.111:88/SG/services/Update_MktAdmin_Share</item>
        <item>http://Updata_MktAdmin_Share</item>
        <item>mktAdmin_Share</item>
        <item>http://Updata_MktAdmin_Share/mktAdmin_Share</item>
    </string-array>
    <string-array name="url_update_ems_division_info">
        <item>http://222.24.63.111:88/SG/services/Update_Ems_Division_Info</item>
        <item>http://Update_Ems_Division_Info</item>
        <item>ems_Division_Info</item>
        <item>http://Update_Ems_Division_Info/ems_Division_Info</item>
    </string-array>
    <string-array name="url_update_mkt_admin_groups">
        <item>http://222.24.63.111:88/SG/services/Update_MktAdmin_Groups</item>
        <item>http://Updata_MktAdmin_Groups</item>
        <item>mktAdmin_Groups</item>
        <item>http://Updata_MktAdmin_Groups/mktAdmin_Groups</item>
    </string-array>
    <string-array name="url_update_mkt_admin_tradetype">
        <item>http://222.24.63.111:88/SG/services/Update_MKTADMIN_TRADETYPE</item>
        <item>http://Upata_MKTADMIN_TRADETYPE</item>
        <item>mKTADMIN_TRADETYPE</item>
        <item>http://Upata_MKTADMIN_TRADETYPE/mKTADMIN_TRADETYPE</item>
    </string-array>
    <string-array name="url_update_mkt_plan_repair">
        <item>http://222.24.63.111:88/SG/services/Update_MktPlan_Repair_Plan</item>
        <item>http://Updata_MktPlan_Repair_Plan</item>
        <item>mktPlan_Repair_Plan</item>
        <item>http://Updata_MktPlan_Repair_Plan/mktPlan_Repair_Plan</item>
    </string-array>
    <string-array name="url_update_mkt_plan_gen_decomenergy">
        <item>http://222.24.63.111:88/SG/services/Update_MktPlan_Gen_DecomEnergy</item>
        <item>http://Update_MktPlan_Gen_DecomEnergy</item>
        <item>ektPlan_Gen_DecomEnergy</item>
        <item>http://Update_MktPlan_Gen_DecomEnergy/ektPlan_Gen_DecomEnergy</item>
    </string-array>
    <string-array name="url_update_mkt_trade_contract_energy">
        <item>http://222.24.63.111:88/SG/services/Update_MktTrade_Contract_Energy</item>
        <item>http://Updata_MktTrade_Contract_Energy</item>
        <item>mktTrade_Contract_Energy</item>
        <item>http://Updata_MktTrade_Contract_Energy/mktTrade_Contract_Energy</item>
    </string-array>
    <string-array name="url_update_mkt_admin_part_bid_unit">
        <item>http://222.24.63.111:88/SG/services/Update_MktAdmin_Part_BidUnit</item>
        <item>http://Updata_MktAdmin_Part_BidUnit</item>
        <item>mktAdmin_Part_BidUnit</item>
        <item>http://Updata_MktAdmin_Part_BidUnit/mktAdmin_Part_BidUnit</item>
    </string-array>
    <string-array name="url_update_mkt_admin_phy_unit">
        <item>http://222.24.63.111:88/SG/services/Update_MktAdmin_PhyUnits</item>
        <item>http://Updata_MktAdmin_PhyUnits</item>
        <item>mktAdmin_PhyUnits</item>
        <item>http://Updata_MktAdmin_PhyUnits/mktAdmin_PhyUnits</item>
    </string-array>
    <string-array name="url_update_mkt_trade_contract_energy_item">
        <item>http://222.24.63.111:88/SG/services/Update_MktTrade_Contract_EnergyItems</item>
        <item>http://Update_MktTrade_Contract_EnergyItems</item>
        <item>mktTrade_Contract_EnergyItems</item>
        <item>http://Update_MktTrade_Contract_EnergyItems/mktTrade_Contract_EnergyItems</item>
    </string-array>
    <string-array name="url_update_mkt_trade_contract_decomenergy">
        <item>http://222.24.63.111:88/SG/services/Update_MktTrade_Contract_DecomEnergy</item>
        <item>http://Updata_MktTrade_Contract_DecomEnergy</item>
        <item>mktTrade_Contract_DecomEnergy</item>
        <item>http://Updata_MktTrade_Contract_DecomEnergy/mktTrade_Contract_DecomEnergy</item>
    </string-array>
    <string-array name="url_login">
        <item>http://222.24.63.111:88/SG/services/Update_LogIn</item>
        <item>http://Updata_LogIn</item>
        <item>logIn</item>
        <item>http://Updata_LogIn/logIn</item>
    </string-array>
    <string-array name="url_iead_back">
        <item>http://222.24.63.111:88/SG/services/Idea_Back</item>
        <item>http://Idea_Back</item>
        <item>idea_Back</item>
        <item>http://Idea_Back/idea_Back</item>
    </string-array>
    <string-array name="url_apk_version">
        <item>http://222.24.63.111:88/SG/services/Updata_APK_VERSION</item>
        <item>http://Updata_APK_VERSION</item>
        <item>apk_VERSION</item>
        <item>http://Updata_APK_VERSION/apk_VERSION</item>
    </string-array>

</resources>